# quest-client

./: README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/: api.py  tests.py
src-tauri/: Cargo.toml  Cross.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
