[tool.poetry]
name = "quest-client"
version = "0.2.0"
description = ""
authors = ["maxus"] # add your name here
readme = "README.md"
packages = [{include = "quest_client"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
mfrc522 = "^0.0.7"
PyQt6 = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
